Fixed : Team list go to event font too big(FHD)

--- a/src/app/pages/team-list/team-list.module.sass
+++ b/src/app/pages/team-list/team-list.module.sass
@@ -233,7 +233,7 @@ body
         -webkit-box-align: center
         -webkit-box-pack: center
         display: flex
-        font-size: 1vw
+        font-size: 0.8rem
         font-weight: 500
         height: 100%
         justify-content: center
